@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.619 2008-04-01 10:41:20 ot Exp $
+# $Id: CHANGES,v 1.620 2008-04-01 14:54:34 ak Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -10,6 +10,9 @@
 # --
 
 CVS HEAD (????/??/??)
+ - (2008/04/01) Fixed bug#2453 - syntax errors on customer search; name@host problems
+    the mail address parser does not recognize the email address if it is not
+    fully 2822 compilant.
  - (2008/04/01) Fixed bug#2575 - trying to PGP::Crypt() utf8-character-strings
     no longer bails, but simply auto-converts the string into an utf8-byte-string,
     such that the correct data is written into the temp file.
